<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6bca5"
    android:textAlignment="viewEnd"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@null"
        android:ems="10"
        android:gravity="top"
        android:inputType="textPersonName"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/removeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <ImageButton
        android:id="@+id/removeBtn"
        android:layout_width="98dp"
        android:layout_height="47dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_button"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_delete" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/cleanBtn"
                style="@android:style/Theme.Material.Wallpaper"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/clean"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="#F44336" />

            <Button
                android:id="@+id/parenthesesBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/parentheses"
                android:textColor="#4CAF50"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/remainderBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/remainder"
                android:textColor="#4CAF50"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/divisionBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/division"
                android:textColor="#4CAF50"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/one"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/twoBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/two"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/threeBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/three"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/multiplicationBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/multiplication"
                android:textColor="#4CAF50"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/four"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/fiveBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/five"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/sixBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/six"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/minusBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/minus"
                android:textColor="#4CAF50"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <Button
                android:id="@+id/sevenBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/seven"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/eightBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/eight"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/nineBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/nine"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/plusBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/plus"
                android:textColor="#4CAF50"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plus_minusBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/negative_positive"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/zeroBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/zero"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/decimalBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/decimal"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/equalBtn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:text="@string/equal"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:backgroundTint="#4CAF50" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>